# refactoring_exercise

./: CMakeLists.txt  base.cpp  base.h  land.cpp  land.h  limplies.cpp  limplies.h  lnot.cpp  lnot.h  lor.cpp  lor.h  main.cpp  var.cpp  var.h
test/: catch.hpp  test.cpp
